--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.5",
+		"@remobile/react-native-toast": "^1.0.7",
 		"axios": "^1.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.2",
+		"react-router-dom": "^6.16.0",
 		"styled-components": "^6.0.8"
 	},
 	"devDependencies": {
